<resources>
    <string name="app_name">CoffeeTrip</string>
    <string name="title_activity_maps">Café Nearby</string>
    <string name="request_location">We need your location to find out where are you.</string>
    <string name="dialog_auth">Auth</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="location_denied">This program might not work as you aspected. Please reconsider to authrize location permission for us.</string>
    <string name="auth_yourself">You can authorize manually. Simply go to Setting -> Apps -> %1$s -> Permissions -> Enable %2$s.</string>
    <string name="auth_location">Location</string>
    <string name="auto_go">Take me there</string>
    <string name="permission_needed">Needs Location Permission</string>
    <string name="high_accuracy_recommand">Please turn on location and toggle high accuracy mode.</string>
    <string name="dialog_no_coffeeshop_title">Oops!</string>
    <string name="dialog_no_coffeeshop_message">There\'re none of coffee shops here, maybe you might walk around to find out some surprise.</string>
    <string name="dialog_no_coffeeshop_ok">Okay</string>
    <string name="unit_m">%1$s m</string>
    <string name="dialog_navigate">Navigate</string>
    <string name="service_unavailable">Service is not available</string>
    <string name="wifi_value">WiFi Quality</string>
    <string name="seat_value">Seat Availablity</string>
    <string name="googlemap_not_install">Google Map is not install, Please go to Play Store to install it.</string>
    <string name="tab_title_map">Map</string>
    <string name="tab_title_list">List</string>
    <string name="unit_m_words">m</string>
    <string name="rating_progress_unit" translatable="false">/5</string>
    <string name="add_to_bookmark">Add to my favorite</string>
    <string name="im_here">Hey! I\'m here!</string>
    <string name="share_this_shop">Share this coffee shop</string>
    <string name="coffeeshop_info">Coffeeshop information</string>
    <string name="limit_time_yes">Limited Time</string>
    <string name="limit_time_maybe">Sometimes will be limited time.</string>
    <string name="limit_time_no">Unlimited Time!</string>
    <string name="socket_yes">Socket Available</string>
    <string name="socket_maybe">Some Seats Have Socket</string>
    <string name="socket_no">No Socket!</string>
    <string name="standing_desk_yes">Standing Desk Available</string>
    <string name="standing_desk_no">No Standing Desk!</string>
    <string name="maps_string_null">We have no idea!</string>
    <string name="share_message">I\'m at %1$s. %2$s.    via #CoffeeTrip</string>
    <string name="share_subject">Share with you</string>
    <string name="share_title">Share</string>
    <string name="list_no_money_data">Currently no data</string>
    <string name="opentime_mrt_none">No Information.</string>
    <string name="internet_request_title">Internet Connection</string>
    <string name="internet_request_message">We need internet connection to request coffee shop informations.</string>
    <string name="menu_about">About</string>
    <string name="no_any_coffee_shop">Found none of coffee shop around here!</string>
    <string name="about_message">if you feel sleepy, did you have another cup of coffee?</string>
    <string name="about_work">Worker</string>
    <string name="about_designer">Designer</string>
    <string name="about_backend">Backend and DevOps</string>
    <string name="about_android">Android App</string>
    <string name="about_licence">About coffee shops data</string>
    <string name="about_data_comes_from">Special thanks Coffee Nomad for shops data.</string>
    <string name="boss_hanashi">I\'m Smelly Head!!! \n The boss of these humans!!!</string>
    <string name="boss_feed">Buy a coffee for Smelly!</string>
    <string name="boss_title">You\'ve found SMELLY HEAD the boss!</string>
    <string name="trophy_boss">Trophy Unlocked: Hidden Room.</string>
</resources>
