<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="43dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        >

        <ImageView
            android:id="@+id/detail_view_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_bookmark"
            tools:visibility="visible"
            />

        <View
            android:id="@+id/left_margin"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/detail_view_bookmark"
            android:visibility="invisible"
            tools:background="#00FF00"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/detail_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/left_margin"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/gray"
            tools:text="天馬茶房是二二八引爆點咖啡店名要多長就給他多長作秀！"
            />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/detail_view_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@id/left_margin"
            android:layout_below="@id/detail_view_title"
            android:numStars="5"
            android:stepSize="0.1"
            android:max="5"
            style="@style/ExpenseRateBar"
            />

        <TextView
            android:id="@+id/detail_view_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_below="@id/detail_view_expense"
            android:layout_toEndOf="@id/left_margin"
            android:textStyle="bold"
            android:textSize="14sp"
            tools:text="200"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/detail_view_distance"
            android:layout_toEndOf="@id/detail_view_distance"
            android:layout_marginStart="1dp"
            android:text="@string/unit_m_words"
            />

        <ImageView
            android:id="@+id/detail_view_wifi_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_view_distance"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/ic_wifi"
            />

        <TextView
            android:id="@+id/detail_view_wifi_quality_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/detail_view_wifi_icon"
            android:layout_toEndOf="@id/left_margin"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:text="@string/wifi_value"
            />

        <ProgressBar
            android:id="@+id/detail_view_wifi_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/detail_view_wifi_quality_title"
            android:layout_toEndOf="@id/left_margin"
            tools:progress="75"
            style="@style/RateProgressBar"
            />

        <TextView
            android:id="@+id/detail_view_wifi_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/secondary_blue"
            android:gravity="bottom"
            android:layout_alignTop="@id/detail_view_wifi_icon"
            android:layout_marginTop="7dp"
            android:layout_marginStart="@dimen/margin_next_to_progress"
            android:layout_toEndOf="@id/detail_view_wifi_quality"
            tools:text="4.5"
            />

        <TextView
            android:id="@+id/detail_view_wifi_unit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignTop="@id/detail_view_wifi_icon"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/detail_view_wifi_score"
            android:gravity="bottom"
            android:textColor="@color/gray_1e"
            android:textSize="12sp"
            android:text="@string/rating_progress_unit"
            />

        <ImageView
            android:id="@+id/detail_view_seat_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_view_wifi_quality"
            android:layout_alignStart="@id/detail_view_wifi_icon"
            android:layout_alignEnd="@id/detail_view_wifi_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/ic_seat"
            />

        <TextView
            android:id="@+id/detail_view_seat_quality_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/detail_view_seat_icon"
            android:layout_toEndOf="@id/left_margin"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:text="@string/seat_value"
            />

        <ProgressBar
            android:id="@+id/detail_view_seat_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/detail_view_seat_quality_title"
            android:layout_toEndOf="@id/left_margin"
            tools:progress="60"
            style="@style/RateProgressBar"
            />

        <TextView
            android:id="@+id/detail_view_seat_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/secondary_blue"
            android:gravity="bottom"
            android:layout_toEndOf="@id/detail_view_seat_quality"
            android:layout_alignTop="@id/detail_view_seat_icon"
            android:layout_marginTop="7dp"
            android:layout_marginStart="@dimen/margin_next_to_progress"
            tools:text="3.0"
            />

        <TextView
            android:id="@+id/detail_view_seat_unit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignTop="@id/detail_view_seat_icon"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/detail_view_seat_score"
            android:gravity="bottom"
            android:textColor="@color/gray_1e"
            android:textSize="12sp"
            android:text="@string/rating_progress_unit"
            />

        <LinearLayout
            android:id="@+id/detail_view_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_below="@id/detail_view_seat_quality"
            android:paddingBottom="20dp"
            >

            <Button
                android:id="@+id/detail_view_button_navigate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_directions_grey"
                android:text="@string/dialog_navigate"
                android:theme="@style/WhiteColorButton"
                />

            <Button
                android:id="@+id/detail_view_button_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_bookmark_grey"
                android:text="@string/add_to_bookmark"
                android:theme="@style/WhiteColorButton"
                android:visibility="gone"
                tools:visibility="visible"
                />

        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_cd"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_share"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/im_here"
            android:layout_marginTop="20dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            />

        <Button
            android:id="@+id/detail_view_button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_gravity="bottom|center_horizontal"
            android:theme="@style/OrangeColorButton"
            android:text="@string/share_this_shop"
            />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_cd"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="26dp"
        android:paddingStart="16dp"
        android:paddingBottom="16dp"
        >

        <TextView
            android:id="@+id/detail_view_coffeeshop_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffeeshop_info"
            android:textSize="16sp"
            android:textColor="@color/gray"
            />

        <ImageView
            android:id="@+id/detail_view_limited_time_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_view_coffeeshop_info_title"
            android:layout_marginTop="25dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            app:srcCompat="@drawable/ic_limited_time"
            />

        <View
            android:id="@+id/coffeeshop_info_left_margin"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/detail_view_limited_time_icon"
            android:visibility="invisible"
            tools:background="#00FF00"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/detail_view_limited_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@id/coffeeshop_info_left_margin"
            android:layout_alignTop="@id/detail_view_limited_time_icon"
            android:layout_alignBottom="@id/detail_view_limited_time_icon"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true"
            tools:text="不限時"
            />

        <ImageView
            android:id="@+id/detail_view_socket_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_below="@id/detail_view_limited_time_icon"
            android:layout_alignStart="@id/detail_view_limited_time_icon"
            android:layout_alignEnd="@id/detail_view_limited_time_icon"
            app:srcCompat="@drawable/ic_socket"
            />

        <TextView
            android:id="@+id/detail_view_socket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@id/coffeeshop_info_left_margin"
            android:layout_alignTop="@id/detail_view_socket_icon"
            android:layout_alignBottom="@id/detail_view_socket_icon"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true"
            tools:text="到處都是插座"
            />

        <ImageView
            android:id="@+id/detail_view_standing_desk_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_below="@id/detail_view_socket_icon"
            android:layout_alignStart="@id/detail_view_socket_icon"
            android:layout_alignEnd="@id/detail_view_socket_icon"
            app:srcCompat="@drawable/ic_standing_desk"
            />

        <TextView
            android:id="@+id/detail_view_standing_desk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@id/coffeeshop_info_left_margin"
            android:layout_alignTop="@id/detail_view_standing_desk_icon"
            android:layout_alignBottom="@id/detail_view_standing_desk_icon"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true"
            tools:text="有站立工作位"
            />

        <View
            android:id="@+id/detail_view_coffeeshop_info_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/detail_view_standing_desk_icon"
            android:layout_toEndOf="@id/coffeeshop_info_left_margin"
            android:layout_marginTop="26dp"
            android:background="@color/gray_cd"
            />

        <ImageView
            android:id="@+id/detail_view_opentime_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_view_coffeeshop_info_divider"
            android:layout_alignStart="@id/detail_view_limited_time_icon"
            android:layout_alignEnd="@id/detail_view_limited_time_icon"
            android:paddingTop="1dp"
            android:layout_marginTop="22dp"
            app:srcCompat="@drawable/ic_open_time"
            />

        <TextView
            android:id="@+id/detail_view_opentime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@+id/coffeeshop_info_left_margin"
            android:layout_alignTop="@id/detail_view_opentime_icon"
            android:maxLines="2"
            android:gravity="top"
            android:ellipsize="end"
            android:textColor="@color/gray"
            android:textSize="16sp"
            tools:text="一~四07:30~20:00 五07:30~21:00 六日08:30~21:00"
            />

        <View
            android:id="@+id/detail_view_coffeeshop_info_divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/detail_view_opentime"
            android:layout_toEndOf="@id/coffeeshop_info_left_margin"
            android:layout_marginTop="29dp"
            android:background="@color/gray_cd"
            />

        <ImageView
            android:id="@+id/detail_view_mrt_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_view_coffeeshop_info_divider2"
            android:layout_alignStart="@id/detail_view_opentime_icon"
            android:layout_alignEnd="@id/detail_view_opentime_icon"
            android:paddingTop="4dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/ic_mrt"
            />

        <TextView
            android:id="@+id/detail_view_mrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@id/coffeeshop_info_left_margin"
            android:layout_alignTop="@id/detail_view_mrt_icon"
            android:gravity="top"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textColor="@color/gray"
            tools:text="北車 Y13"
            />

    </RelativeLayout>
</LinearLayout>
